added more info on tutorial

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -85,6 +85,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cf3b9dcb-c1ed-4db8-b878-4b08b4186bc6",
+   "metadata": {},
+   "source": [
+    "The code above will only less than a second. This will save a new config file ```./config/fraction_processor_samples.json```. Please note that we don't overwrite the original full config file ```./config/fraction_processor_samples.json```. This is so that if you would like to change your fraction value, you can do so quickly, instead of waiting a full minute to redo the whole prestage step."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2b8cd851-aaf5-443c-8e60-f4b713e40838",
    "metadata": {},
    "source": [
