--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -60,7 +60,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! python run_prestage.py --chunksize 200000 --input_string \"Year_2018/DataRun_A,C/Bkg_TT/Sig_\""
+    "data_l = ['A', 'B', 'C', 'D']\n",
+    "bkg_l = ['DY', 'TT',]\n",
+    "sig_l = ['ggH', 'VBF']\n",
+    "! python run_prestage.py --chunksize 80000 --year 2018 --cluster True --data {' '.join(data_l)} --background {' '.join(bkg_l)} --signal {' '.join(sig_l)}"
    ]
   },
   {
@@ -98,7 +101,9 @@
    "source": [
     "# Running Stage 1\n",
     "\n",
-    "Now we're ready to execute stage 1 of the analysis, which refers to the baseline selections we apply just before categorization of Higgs decay categories. we do this by simply running ```run_stage1.py```, though we recommend to also add ```-W ignore``` option to suppress warning flags. This operation takes the most time, ranging from 30 mins for fraction of around 0.25, all the way to hours for a full sample run. The outputs of the ```run_stage1.py``` will be saved as collection of ```.parquet``` files in the directory that's defined in the ```save_path``` directory of the script."
+    "Now we're ready to execute stage 1 of the analysis, which refers to the baseline selections we apply just before categorization of Higgs decay categories. we do this by simply running ```run_stage1.py```, though we recommend to also add ```-W ignore``` option to suppress warning flags. This operation takes the most time, ranging from 30 mins for fraction of around 0.25, all the way to hours for a full sample run. The outputs of the ```run_stage1.py``` will be saved as collection of ```.parquet``` files in the directory that's defined in the ```--save_path``` flag along with the sample name and fraction. \n",
+    "\n",
+    "For instance, data_A samples with fraction 0.25 with sample_path of ```/depot/cms/users/yun79/results/stage1/test/``` would be saved at ```/depot/cms/users/yun79/results/stage1/test/f0_25/data_A```"
    ]
   },
   {
@@ -108,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! python -W ignore run_stage1.py"
+    "! python -W ignore run_stage1.py --save_path \"/depot/cms/users/yun79/results/stage1/test/\""
    ]
   },
   {
@@ -124,7 +129,11 @@
     "\n",
     "Where we specify if we want Data/MC ratio plot in the bottom panel on with \"Y\" to mean yes and \"N\" to mean no after ```Ratio_```, plot in log scale in the y axis after ```LogY_```, show integrated luminosity value of the run after ```ShowLumi_``` and status of the plot after ```Status_```, where the option is \"work\" for \"Work in Progress\", \"prelim\" for \"Preliminary\" and empty character (\"\") for no mention of the status at all.\n",
     "\n",
-    "Ie: Ratio_Y/LogY_Y/ShowLumi_N/Status_work indicates to have Data/MC ratio plot on the bottom, plot in logarithmic scale, don't show the integrated luminosity value, and have \"Work in progress\" label\n"
+    "Ie: Ratio_Y/LogY_Y/ShowLumi_N/Status_work indicates to have Data/MC ratio plot on the bottom, plot in logarithmic scale, don't show the integrated luminosity value, and have \"Work in progress\" label\n",
+    "\n",
+    "next is the ```--load_path``` flag, which should be identical to the path specified in ```--save_path``` flag when running the ```run_stage1.py``` script.\n",
+    "\n",
+    "One can also specify the path to where the validation plots will be saved by adding ```--save_path``` flag onto ```run_stage1_validation.py``` script, or just use the default path ```./validation/figs```"
    ]
   },
   {
@@ -134,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! python run_stage1_validation.py --fraction 0.001 --input_string \"Ratio_Y/LogY_Y/ShowLumi_N/Status_work\"\n"
+    "! python run_stage1_validation.py --fraction 0.001 --input_string \"Ratio_Y/LogY_Y/ShowLumi_N/Status_work\" --load_path \"/depot/cms/users/yun79/results/stage1/test/\""
    ]
   }
  ],
