update the documentation

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -46,11 +46,7 @@
    "source": [
     "The chunksize value is simple: it is an integer value of \"chunks\" of rows of data that each worker works on during parallelized workflow. \n",
     "\n",
-    "The input string value for ```--input_string``` needs a bit more explaining. The general format is:\n",
-    "\n",
-    "\"Year_{2016pre or 2016post or 2017 or 2018}/DataRun_{A,B,C,D,E,F,G,H)}/Bkg_{DY,TT}/Sig_{ggH, VBF}\"\n",
-    "\n",
-    "Where we define the era after \"Year_\", MC Background after \"Bkg_\" and MC Signal after \"Sig_\". Ie: Year_2018/DataRun_A,C/Bkg_TT/Sig_ , which states data_A, data_C and ttbar MC Background for year 2018, with no signal samples. This operation would take about a minute.\n"
+    "Moreover, one can specify the list of data runs and MC samples for the analysis to run on. If left empty/ imcompatible (ie data 'A' in year 2017), it will just skip and move on.\n"
    ]
   },
   {
