got rid of ectra lines from dummy histogram by not cloning but making a new empty histogram for dummy hist

--- a/ROOTPlotTest.ipynb
+++ b/ROOTPlotTest.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 33,
    "id": "9be614e2-b8c1-4772-8711-1eb85e823e03",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 34,
    "id": "a2fe8d00-5fe0-40b5-8e04-b2472f46de80",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 35,
    "id": "12c7a0f2-9fe4-46a7-8640-7fa5ace0c997",
    "metadata": {},
    "outputs": [
@@ -229,12 +229,9 @@
      "output_type": "stream",
      "text": [
       "process: vbf_powheg\n",
-      "(np_hist): False\n",
       "process: data_A\n",
-      "(np_hist): False\n",
       "data activated\n",
       "process: data_B\n",
-      "(np_hist): False\n",
       "data activated\n"
      ]
     },
@@ -274,12 +271,12 @@
     "    np_hist, _ = np.histogram(events[var].compute(), bins=binning)\n",
     "    # print(f\"max(np_hist): {max(np_hist)}\")\n",
     "    # print(f\"(np_hist): {(np_hist)}\")\n",
-    "    print(f\"(np_hist): {np.any(np_hist==0)}\")\n",
+    "    # print(f\"(np_hist): {np.any(np_hist==0)}\")\n",
     "    \n",
     "    if \"data\" in process:\n",
     "        print(\"data activated\")\n",
     "        jet1_pt_hist_data = ROOT.TH1F( 'jet1_pt_hist_data', 'jet1_pt', len(binning)-1, min(binning), max(binning))\n",
-    "        for idx in range (len(np_hist)):\n",
+    "        for idx in range (len(np_hist)): # paste the np histogram values to root histogram\n",
     "            jet1_pt_hist_data.SetBinContent(1+idx, np_hist[idx])\n",
     "        # print(f\"jet1_pt_hist: {jet1_pt_hist.GetBinContent(2)}\")\n",
     "        # jet1_pt_hist.GetXaxis().SetTitle(\"obs\");\n",
@@ -308,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 36,
    "id": "79b8e1b5-7870-4a31-ad6f-d553fb983f2c",
    "metadata": {},
    "outputs": [],
@@ -317,6 +314,7 @@
     "dummy_hist = data_hists[0].Clone(\"dummy_hist\");\n",
     "dummy_hist.GetXaxis().SetTitleSize(0);\n",
     "dummy_hist.GetXaxis().SetLabelSize(0);\n",
+    "dummy_hist.GetXaxis().SetTitle(\"obs\");\n",
     "# dummy_hist.GetYaxis().SetRangeUser(0.01,10e9);\n",
     "dummy_hist.SetTitle(\"Events\")\n",
     "dummy_hist.Draw(\"EP\");\n",
@@ -335,9 +333,9 @@
     "data_hist_stacked.SetMarkerStyle(20);\n",
     "data_hist_stacked.SetMarkerSize(1);\n",
     "data_hist_stacked.SetMarkerColor(1);\n",
-    "data_hist_stacked.SetLineColor(1);\n",
+    "# data_hist_stacked.SetLineColor(1);\n",
     "data_hist_stacked.Draw(\"EPsame\");\n",
-    "data_hist_stacked.GetXaxis().SetTitle(\"obs\");\n",
+    "\n",
     "        \n",
     "# for data_hist in data_hists:\n",
     "#     data_hist.SetMarkerStyle(20);\n",
@@ -350,18 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "50a695c2-8c1e-4f15-bf5a-3c60ae4021ff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dummy_hist = data_hists[0].Clone(\"dummy_hist\");\n",
-    "# dummy_hist.GetBinContent(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 37,
    "id": "e3c218e4-98cb-4631-9c49-ca3464b0977c",
    "metadata": {},
    "outputs": [
@@ -391,7 +378,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 31,
+   "id": "50a695c2-8c1e-4f15-bf5a-3c60ae4021ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dummy_hist = data_hists[0].Clone(\"dummy_hist\");\n",
+    "# dummy_hist.GetBinContent(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "5d767a93-a9fe-46b3-b4bc-28ddd2659951",
    "metadata": {},
    "outputs": [],
