making a completely new histogram (no cloning) b4 stacking other colore histograms maintinas their color scheme

--- a/ROOTPlotTest.ipynb
+++ b/ROOTPlotTest.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "id": "9be614e2-b8c1-4772-8711-1eb85e823e03",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "a2fe8d00-5fe0-40b5-8e04-b2472f46de80",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "id": "12c7a0f2-9fe4-46a7-8640-7fa5ace0c997",
    "metadata": {},
    "outputs": [
@@ -228,10 +228,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "process: vbf_powheg\n",
+      "process: dy_M-100To200\n",
+      "DY activated\n",
+      "process: dy_M-50\n",
+      "DY activated\n",
       "process: data_A\n",
       "data activated\n",
       "process: data_B\n",
+      "data activated\n",
+      "process: data_C\n",
+      "data activated\n",
+      "process: data_D\n",
       "data activated\n"
      ]
     },
@@ -239,6 +246,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_dy (Potential memory leak).\n",
+      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_dy (Potential memory leak).\n",
+      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_data (Potential memory leak).\n",
       "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_data (Potential memory leak).\n",
       "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_data (Potential memory leak).\n",
       "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_data (Potential memory leak).\n"
@@ -250,7 +260,7 @@
     "with open(\"./histogram/plot_settings.json\", \"r\") as file:\n",
     "    plot_settings = json.load(file)\n",
     "# available_processes = [\"data_A\",\"vbf_powheg\"]\n",
-    "available_processes = [\"vbf_powheg\", \"data_A\", \"data_B\"]\n",
+    "available_processes = [\"dy_M-100To200\", \"dy_M-50\",\"data_A\", \"data_B\", \"data_C\", \"data_D\"]\n",
     "# process = \"vbf_powheg\"\n",
     "load_path = \"/depot/cms/users/yun79/results/stage1/test_full\"\n",
     "load_path = load_path + f\"/f0_1\"\n",
@@ -259,9 +269,16 @@
     "# }\n",
     "var = \"jet1_pt\"\n",
     "binning = np.linspace(*plot_settings[var][\"binning_linspace\"])\n",
-    "data_hists = []\n",
-    "mc_hists = []\n",
+    "\n",
     "# dummy_hist.Draw(\"hist\");\n",
+    "group_data_processes = [\"data_A\", \"data_B\", \"data_C\", \"data_D\",]\n",
+    "group_DY_processes = [\"dy_M-100To200\", \"dy_M-50\"]\n",
+    "# group_Top_processes = [\"ttjets_dl\", \"ttjets_sl\"]\n",
+    "\n",
+    "group_data_hists = []\n",
+    "group_DY_hists = []\n",
+    "# group_Top_hists = []\n",
+    "# group_other_hists = [] # histograms not belonging to any other group\n",
     "\n",
     "for process in available_processes:\n",
     "    print(f\"process: {process}\")\n",
@@ -273,31 +290,30 @@
     "    # print(f\"(np_hist): {(np_hist)}\")\n",
     "    # print(f\"(np_hist): {np.any(np_hist==0)}\")\n",
     "    \n",
-    "    if \"data\" in process:\n",
+    "    if process in group_data_processes:\n",
     "        print(\"data activated\")\n",
-    "        jet1_pt_hist_data = ROOT.TH1F( 'jet1_pt_hist_data', 'jet1_pt', len(binning)-1, min(binning), max(binning))\n",
+    "        var_hist_data = ROOT.TH1F( var+'_hist_data', var, len(binning)-1, min(binning), max(binning))\n",
     "        for idx in range (len(np_hist)): # paste the np histogram values to root histogram\n",
-    "            jet1_pt_hist_data.SetBinContent(1+idx, np_hist[idx])\n",
-    "        # print(f\"jet1_pt_hist: {jet1_pt_hist.GetBinContent(2)}\")\n",
-    "        # jet1_pt_hist.GetXaxis().SetTitle(\"obs\");\n",
-    "        # jet1_pt_hist.SetMarkerStyle(20);\n",
-    "        # jet1_pt_hist.SetMarkerSize(1);\n",
-    "        # jet1_pt_hist.SetMarkerColor(1);\n",
-    "        # jet1_pt_hist.SetLineColor(1);\n",
-    "        data_hists.append(jet1_pt_hist_data)\n",
-    "        # jet1_pt_hist.GetYaxis().SetRangeUser(0.01,10e9);\n",
-    "        # jet1_pt_hist.Draw(\"EPsame\");\n",
-    "        # jet1_pt_hist.Draw(\"ehist\");\n",
-    "    else:\n",
-    "        # pass\n",
-    "        # print(\"mc activated\")\n",
-    "        # jet1_pt_hist.SetFillColor(ROOT.kBlue);\n",
-    "        # jet1_pt_hist.SetLineColor(1);\n",
-    "        # jet1_pt_hist.Draw(\"hist same\")\n",
-    "        jet1_pt_hist_mc = ROOT.TH1F( 'jet1_pt_hist_data', 'jet1_pt', len(binning)-1, min(binning), max(binning))\n",
-    "        for idx in range (len(np_hist)):\n",
-    "            jet1_pt_hist_mc.SetBinContent(1+idx, np_hist[idx])\n",
-    "        mc_hists.append(jet1_pt_hist_mc)\n",
+    "            var_hist_data.SetBinContent(1+idx, np_hist[idx])\n",
+    "        group_data_hists.append(var_hist_data)\n",
+    "    elif process in group_DY_processes:\n",
+    "        print(\"DY activated\")\n",
+    "        var_hist_DY = ROOT.TH1F( var+'_hist_dy', var, len(binning)-1, min(binning), max(binning))\n",
+    "        for idx in range (len(np_hist)): # paste the np histogram values to root histogram\n",
+    "            var_hist_DY.SetBinContent(1+idx, np_hist[idx])\n",
+    "        group_DY_hists.append(var_hist_DY)\n",
+    "    # elif process in group_Top_hists:\n",
+    "    #     print(\"top activated\")\n",
+    "    #     var_hist_Top = ROOT.TH1F( var+'_hist_top', var, len(binning)-1, min(binning), max(binning))\n",
+    "    #     for idx in range (len(np_hist)): # paste the np histogram values to root histogram\n",
+    "    #         var_hist_Top.SetBinContent(1+idx, np_hist[idx])\n",
+    "    #     group_top_hists.append(var_hist_Top)\n",
+    "    # else:\n",
+    "    #     print(\"other activated\")\n",
+    "    #     var_hist_other = ROOT.TH1F( var+'_hist_other', var, len(binning)-1, min(binning), max(binning))\n",
+    "    #     for idx in range (len(np_hist)):\n",
+    "    #         var_hist_other.SetBinContent(1+idx, np_hist[idx])\n",
+    "    #     group_other_hists.append(var_hist_other)\n",
     "        \n",
     "    \n",
     "    # leg.AddEntry(jet1_pt_hist, process,\"PEL\");\n"
@@ -305,50 +321,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "id": "79b8e1b5-7870-4a31-ad6f-d553fb983f2c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning in <TROOT::Append>: Replacing existing TH1: dummy_hist (Potential memory leak).\n"
+     ]
+    }
+   ],
    "source": [
-    "# dummy_hist = ROOT.TH1F('dummy_hist', \"dummy\", len(binning)-1, min(binning), max(binning))\n",
-    "dummy_hist = data_hists[0].Clone(\"dummy_hist\");\n",
+    "dummy_hist = ROOT.TH1F('dummy_hist', \"dummy\", len(binning)-1, min(binning), max(binning))\n",
+    "# dummy_hist = group_data_hists[0].Clone(\"dummy_hist\");\n",
     "dummy_hist.GetXaxis().SetTitleSize(0);\n",
     "dummy_hist.GetXaxis().SetLabelSize(0);\n",
     "dummy_hist.GetXaxis().SetTitle(\"obs\");\n",
     "# dummy_hist.GetYaxis().SetRangeUser(0.01,10e9);\n",
     "dummy_hist.SetTitle(\"Events\")\n",
     "dummy_hist.Draw(\"EP\");\n",
-    "for mc_hist in mc_hists:\n",
-    "    mc_hist.SetFillColor(ROOT.kBlue);\n",
-    "    mc_hist.SetLineColor(1);\n",
-    "    mc_hist.GetYaxis().SetRangeUser(0.01,10e9);\n",
-    "    mc_hist.Draw(\"hist same\");\n",
+    "\n",
+    "all_MC_hist_list = []\n",
+    "\n",
+    "DY_hist_stacked = group_DY_hists[0]\n",
+    "if len(group_DY_hists) > 1:\n",
+    "    for idx in range(1, len(group_DY_hists)):\n",
+    "        DY_hist_stacked.Add(group_DY_hists[idx])\n",
+    "DY_hist_stacked.SetLineColor(1);\n",
+    "DY_hist_stacked.SetFillColor(ROOT.kOrange+1);\n",
+    "all_MC_hist_list.append(DY_hist_stacked)\n",
+    "DY_hist_stacked.Draw(\"hist same\");\n",
+    "# Top_hist_stacked = group_Top_hists[0]\n",
+    "# if len(group_Top_hists) > 1:\n",
+    "#     for idx in range(1, len(group_Top_hists)):\n",
+    "#         Top_hist_stacked.Add(group_Top_hists[idx])\n",
+    "# Top_hist_stacked.SetLineColor(1);\n",
+    "# Top_hist_stacked.SetFillColor(ROOT.kGreen+1);\n",
+    "# all_MC_hist_list.append(Top_hist_stacked)\n",
+    "\n",
+    "# # aggregate all MC hist by stacking them\n",
+    "# all_MC_hist_stacked = dummy_hist.Clone(\"all_MC_hist_stacked\");\n",
+    "# for MC_hist_stacked in all_MC_hist_list: # add smallest histgrams first, so from other -> DY\n",
+    "#     all_MC_hist_stacked.Add(MC_hist_stacked)\n",
+    "# all_MC_hist_stacked.Draw(\"hist same\");\n",
     "\n",
     "# stack and plot data \n",
-    "data_hist_stacked = data_hists[0]\n",
-    "if len(data_hists) > 1:\n",
-    "    for idx in range(1, len(data_hists)):\n",
-    "        data_hist_stacked.Add(data_hists[idx])\n",
+    "data_hist_stacked = group_data_hists[0]\n",
+    "if len(group_data_hists) > 1:\n",
+    "    for idx in range(1, len(group_data_hists)):\n",
+    "        data_hist_stacked.Add(group_data_hists[idx])\n",
     "\n",
     "data_hist_stacked.SetMarkerStyle(20);\n",
     "data_hist_stacked.SetMarkerSize(1);\n",
     "data_hist_stacked.SetMarkerColor(1);\n",
-    "# data_hist_stacked.SetLineColor(1);\n",
+    "data_hist_stacked.SetLineColor(1);\n",
     "data_hist_stacked.Draw(\"EPsame\");\n",
-    "\n",
-    "        \n",
-    "# for data_hist in data_hists:\n",
-    "#     data_hist.SetMarkerStyle(20);\n",
-    "#     data_hist.SetMarkerSize(1);\n",
-    "#     data_hist.SetMarkerColor(1);\n",
-    "#     data_hist.SetLineColor(1);\n",
-    "#     data_hist.Draw(\"EPsame\");\n",
-    "#     data_hist.GetXaxis().SetTitle(\"obs\");"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "id": "e3c218e4-98cb-4631-9c49-ca3464b0977c",
    "metadata": {},
    "outputs": [
@@ -378,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "50a695c2-8c1e-4f15-bf5a-3c60ae4021ff",
    "metadata": {},
    "outputs": [],
