successfully stacked two mc bkgs

--- a/ROOTPlotTest.ipynb
+++ b/ROOTPlotTest.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "9be614e2-b8c1-4772-8711-1eb85e823e03",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "a2fe8d00-5fe0-40b5-8e04-b2472f46de80",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "12c7a0f2-9fe4-46a7-8640-7fa5ace0c997",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,11 @@
       "process: data_C\n",
       "data activated\n",
       "process: data_D\n",
-      "data activated\n"
+      "data activated\n",
+      "process: ttjets_dl\n",
+      "top activated\n",
+      "process: ttjets_sl\n",
+      "top activated\n"
      ]
     },
     {
@@ -251,7 +255,9 @@
       "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_data (Potential memory leak).\n",
       "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_data (Potential memory leak).\n",
       "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_data (Potential memory leak).\n",
-      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_data (Potential memory leak).\n"
+      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_data (Potential memory leak).\n",
+      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_top (Potential memory leak).\n",
+      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_top (Potential memory leak).\n"
      ]
     }
    ],
@@ -260,7 +266,7 @@
     "with open(\"./histogram/plot_settings.json\", \"r\") as file:\n",
     "    plot_settings = json.load(file)\n",
     "# available_processes = [\"data_A\",\"vbf_powheg\"]\n",
-    "available_processes = [\"dy_M-100To200\", \"dy_M-50\",\"data_A\", \"data_B\", \"data_C\", \"data_D\"]\n",
+    "available_processes = [\"dy_M-100To200\", \"dy_M-50\",\"data_A\", \"data_B\", \"data_C\", \"data_D\", \"ttjets_dl\", \"ttjets_sl\"]\n",
     "# process = \"vbf_powheg\"\n",
     "load_path = \"/depot/cms/users/yun79/results/stage1/test_full\"\n",
     "load_path = load_path + f\"/f0_1\"\n",
@@ -273,11 +279,11 @@
     "# dummy_hist.Draw(\"hist\");\n",
     "group_data_processes = [\"data_A\", \"data_B\", \"data_C\", \"data_D\",]\n",
     "group_DY_processes = [\"dy_M-100To200\", \"dy_M-50\"]\n",
-    "# group_Top_processes = [\"ttjets_dl\", \"ttjets_sl\"]\n",
+    "group_Top_processes = [\"ttjets_dl\", \"ttjets_sl\"]\n",
     "\n",
     "group_data_hists = []\n",
     "group_DY_hists = []\n",
-    "# group_Top_hists = []\n",
+    "group_Top_hists = []\n",
     "# group_other_hists = [] # histograms not belonging to any other group\n",
     "\n",
     "for process in available_processes:\n",
@@ -302,12 +308,12 @@
     "        for idx in range (len(np_hist)): # paste the np histogram values to root histogram\n",
     "            var_hist_DY.SetBinContent(1+idx, np_hist[idx])\n",
     "        group_DY_hists.append(var_hist_DY)\n",
-    "    # elif process in group_Top_hists:\n",
-    "    #     print(\"top activated\")\n",
-    "    #     var_hist_Top = ROOT.TH1F( var+'_hist_top', var, len(binning)-1, min(binning), max(binning))\n",
-    "    #     for idx in range (len(np_hist)): # paste the np histogram values to root histogram\n",
-    "    #         var_hist_Top.SetBinContent(1+idx, np_hist[idx])\n",
-    "    #     group_top_hists.append(var_hist_Top)\n",
+    "    elif process in group_Top_processes:\n",
+    "        print(\"top activated\")\n",
+    "        var_hist_Top = ROOT.TH1F( var+'_hist_top', var, len(binning)-1, min(binning), max(binning))\n",
+    "        for idx in range (len(np_hist)): # paste the np histogram values to root histogram\n",
+    "            var_hist_Top.SetBinContent(1+idx, np_hist[idx])\n",
+    "        group_Top_hists.append(var_hist_Top)\n",
     "    # else:\n",
     "    #     print(\"other activated\")\n",
     "    #     var_hist_other = ROOT.TH1F( var+'_hist_other', var, len(binning)-1, min(binning), max(binning))\n",
@@ -321,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "79b8e1b5-7870-4a31-ad6f-d553fb983f2c",
    "metadata": {},
    "outputs": [
@@ -345,27 +351,32 @@
     "\n",
     "all_MC_hist_list = []\n",
     "\n",
-    "DY_hist_stacked = group_DY_hists[0]\n",
-    "if len(group_DY_hists) > 1:\n",
-    "    for idx in range(1, len(group_DY_hists)):\n",
-    "        DY_hist_stacked.Add(group_DY_hists[idx])\n",
-    "DY_hist_stacked.SetLineColor(1);\n",
-    "DY_hist_stacked.SetFillColor(ROOT.kOrange+1);\n",
-    "all_MC_hist_list.append(DY_hist_stacked)\n",
-    "DY_hist_stacked.Draw(\"hist same\");\n",
-    "# Top_hist_stacked = group_Top_hists[0]\n",
-    "# if len(group_Top_hists) > 1:\n",
-    "#     for idx in range(1, len(group_Top_hists)):\n",
-    "#         Top_hist_stacked.Add(group_Top_hists[idx])\n",
-    "# Top_hist_stacked.SetLineColor(1);\n",
-    "# Top_hist_stacked.SetFillColor(ROOT.kGreen+1);\n",
-    "# all_MC_hist_list.append(Top_hist_stacked)\n",
+    "if len(group_DY_hists) > 0:\n",
+    "    DY_hist_stacked = group_DY_hists[0]\n",
+    "    if len(group_DY_hists) > 1:\n",
+    "        for idx in range(1, len(group_DY_hists)):\n",
+    "            DY_hist_stacked.Add(group_DY_hists[idx])\n",
+    "    DY_hist_stacked.SetLineColor(1);\n",
+    "    DY_hist_stacked.SetFillColor(ROOT.kOrange+1);\n",
+    "    all_MC_hist_list.append(DY_hist_stacked)\n",
+    "#----------------------------------------------\n",
+    "if len(group_Top_hists) > 0:\n",
+    "    Top_hist_stacked = group_Top_hists[0]\n",
+    "    if len(group_Top_hists) > 1:\n",
+    "        for idx in range(1, len(group_Top_hists)):\n",
+    "            Top_hist_stacked.Add(group_Top_hists[idx])\n",
+    "    Top_hist_stacked.SetLineColor(1);\n",
+    "    Top_hist_stacked.SetFillColor(ROOT.kGreen+1);\n",
+    "    all_MC_hist_list.append(Top_hist_stacked)\n",
+    "#----------------------------------------------\n",
     "\n",
-    "# # aggregate all MC hist by stacking them\n",
-    "# all_MC_hist_stacked = dummy_hist.Clone(\"all_MC_hist_stacked\");\n",
-    "# for MC_hist_stacked in all_MC_hist_list: # add smallest histgrams first, so from other -> DY\n",
-    "#     all_MC_hist_stacked.Add(MC_hist_stacked)\n",
-    "# all_MC_hist_stacked.Draw(\"hist same\");\n",
+    "\n",
+    "# aggregate all MC hist by stacking them\n",
+    "all_MC_hist_stacked = ROOT.THStack(\"all_MC_hist_stacked\", \"\");\n",
+    "all_MC_hist_list.reverse() # add smallest histgrams first, so from other -> DY\n",
+    "for MC_hist_stacked in all_MC_hist_list: \n",
+    "    all_MC_hist_stacked.Add(MC_hist_stacked)\n",
+    "all_MC_hist_stacked.Draw(\"hist same\");\n",
     "\n",
     "# stack and plot data \n",
     "data_hist_stacked = group_data_hists[0]\n",
@@ -383,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "e3c218e4-98cb-4631-9c49-ca3464b0977c",
    "metadata": {},
    "outputs": [
@@ -413,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "50a695c2-8c1e-4f15-bf5a-3c60ae4021ff",
    "metadata": {},
    "outputs": [],
