successfully added different mc bkg to be stacked and in right color scheme

--- a/ROOTPlotTest.ipynb
+++ b/ROOTPlotTest.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "9be614e2-b8c1-4772-8711-1eb85e823e03",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "a2fe8d00-5fe0-40b5-8e04-b2472f46de80",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "12c7a0f2-9fe4-46a7-8640-7fa5ace0c997",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
       "process: dy_M-100To200\n",
       "DY activated\n",
       "process: dy_M-50\n",
-      "DY activated\n",
+      "Ewk activated\n",
       "process: data_A\n",
       "data activated\n",
       "process: data_B\n",
@@ -243,21 +243,27 @@
       "process: ttjets_dl\n",
       "top activated\n",
       "process: ttjets_sl\n",
-      "top activated\n"
+      "top activated\n",
+      "process: ggh_powheg\n",
+      "VV activated\n",
+      "process: vbf_powheg\n",
+      "other activated\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_dy (Potential memory leak).\n",
-      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_dy (Potential memory leak).\n",
+      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_DY (Potential memory leak).\n",
+      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_Ewk (Potential memory leak).\n",
       "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_data (Potential memory leak).\n",
       "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_data (Potential memory leak).\n",
       "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_data (Potential memory leak).\n",
       "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_data (Potential memory leak).\n",
-      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_top (Potential memory leak).\n",
-      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_top (Potential memory leak).\n"
+      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_Top (Potential memory leak).\n",
+      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_Top (Potential memory leak).\n",
+      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_VV (Potential memory leak).\n",
+      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_other (Potential memory leak).\n"
      ]
     }
    ],
@@ -266,24 +272,29 @@
     "with open(\"./histogram/plot_settings.json\", \"r\") as file:\n",
     "    plot_settings = json.load(file)\n",
     "# available_processes = [\"data_A\",\"vbf_powheg\"]\n",
-    "available_processes = [\"dy_M-100To200\", \"dy_M-50\",\"data_A\", \"data_B\", \"data_C\", \"data_D\", \"ttjets_dl\", \"ttjets_sl\"]\n",
-    "# process = \"vbf_powheg\"\n",
+    "available_processes = [\"dy_M-100To200\", \"dy_M-50\",\"data_A\", \"data_B\", \"data_C\", \"data_D\", \"ttjets_dl\", \"ttjets_sl\", \"ggh_powheg\",\"vbf_powheg\"]\n",
     "load_path = \"/depot/cms/users/yun79/results/stage1/test_full\"\n",
     "load_path = load_path + f\"/f0_1\"\n",
-    "# color_map= {\n",
-    "#     \"vbf_powheg\" : \n",
-    "# }\n",
+    "\n",
     "var = \"jet1_pt\"\n",
     "binning = np.linspace(*plot_settings[var][\"binning_linspace\"])\n",
     "\n",
     "# dummy_hist.Draw(\"hist\");\n",
     "group_data_processes = [\"data_A\", \"data_B\", \"data_C\", \"data_D\",]\n",
-    "group_DY_processes = [\"dy_M-100To200\", \"dy_M-50\"]\n",
+    "# group_DY_processes = [\"dy_M-100To200\", \"dy_M-50\"]\n",
+    "group_DY_processes = [\"dy_M-100To200\"]\n",
     "group_Top_processes = [\"ttjets_dl\", \"ttjets_sl\"]\n",
+    "group_Ewk_processes = [\"dy_M-50\"]\n",
+    "group_VV_processes = [\"ggh_powheg\"]# diboson\n",
+    "# adding signal for other processes for testing \n",
     "\n",
     "group_data_hists = []\n",
     "group_DY_hists = []\n",
     "group_Top_hists = []\n",
+    "group_Ewk_hists = []\n",
+    "group_VV_hists = []\n",
+    "group_other_hists = []\n",
+    "\n",
     "# group_other_hists = [] # histograms not belonging to any other group\n",
     "\n",
     "for process in available_processes:\n",
@@ -302,24 +313,41 @@
     "        for idx in range (len(np_hist)): # paste the np histogram values to root histogram\n",
     "            var_hist_data.SetBinContent(1+idx, np_hist[idx])\n",
     "        group_data_hists.append(var_hist_data)\n",
+    "    #-------------------------------------------------------\n",
     "    elif process in group_DY_processes:\n",
     "        print(\"DY activated\")\n",
-    "        var_hist_DY = ROOT.TH1F( var+'_hist_dy', var, len(binning)-1, min(binning), max(binning))\n",
+    "        var_hist_DY = ROOT.TH1F( var+'_hist_DY', var, len(binning)-1, min(binning), max(binning))\n",
     "        for idx in range (len(np_hist)): # paste the np histogram values to root histogram\n",
     "            var_hist_DY.SetBinContent(1+idx, np_hist[idx])\n",
     "        group_DY_hists.append(var_hist_DY)\n",
+    "    #-------------------------------------------------------\n",
     "    elif process in group_Top_processes:\n",
     "        print(\"top activated\")\n",
-    "        var_hist_Top = ROOT.TH1F( var+'_hist_top', var, len(binning)-1, min(binning), max(binning))\n",
+    "        var_hist_Top = ROOT.TH1F( var+'_hist_Top', var, len(binning)-1, min(binning), max(binning))\n",
     "        for idx in range (len(np_hist)): # paste the np histogram values to root histogram\n",
     "            var_hist_Top.SetBinContent(1+idx, np_hist[idx])\n",
     "        group_Top_hists.append(var_hist_Top)\n",
-    "    # else:\n",
-    "    #     print(\"other activated\")\n",
-    "    #     var_hist_other = ROOT.TH1F( var+'_hist_other', var, len(binning)-1, min(binning), max(binning))\n",
-    "    #     for idx in range (len(np_hist)):\n",
-    "    #         var_hist_other.SetBinContent(1+idx, np_hist[idx])\n",
-    "    #     group_other_hists.append(var_hist_other)\n",
+    "    #-------------------------------------------------------\n",
+    "    elif process in group_Ewk_processes:\n",
+    "        print(\"Ewk activated\")\n",
+    "        var_hist_Ewk = ROOT.TH1F( var+'_hist_Ewk', var, len(binning)-1, min(binning), max(binning))\n",
+    "        for idx in range (len(np_hist)): # paste the np histogram values to root histogram\n",
+    "            var_hist_Ewk.SetBinContent(1+idx, np_hist[idx])\n",
+    "        group_Ewk_hists.append(var_hist_Ewk)\n",
+    "    #-------------------------------------------------------\n",
+    "    elif process in group_VV_processes:\n",
+    "        print(\"VV activated\")\n",
+    "        var_hist_VV = ROOT.TH1F( var+'_hist_VV', var, len(binning)-1, min(binning), max(binning))\n",
+    "        for idx in range (len(np_hist)): # paste the np histogram values to root histogram\n",
+    "            var_hist_VV.SetBinContent(1+idx, np_hist[idx])\n",
+    "        group_VV_hists.append(var_hist_VV)\n",
+    "    #-------------------------------------------------------\n",
+    "    else: # put into \"other\" group\n",
+    "        print(\"other activated\")\n",
+    "        var_hist_other = ROOT.TH1F( var+'_hist_other', var, len(binning)-1, min(binning), max(binning))\n",
+    "        for idx in range (len(np_hist)): # paste the np histogram values to root histogram\n",
+    "            var_hist_other.SetBinContent(1+idx, np_hist[idx])\n",
+    "        group_other_hists.append(var_hist_other)\n",
     "        \n",
     "    \n",
     "    # leg.AddEntry(jet1_pt_hist, process,\"PEL\");\n"
@@ -327,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "id": "79b8e1b5-7870-4a31-ad6f-d553fb983f2c",
    "metadata": {},
    "outputs": [
@@ -369,6 +397,33 @@
     "    Top_hist_stacked.SetFillColor(ROOT.kGreen+1);\n",
     "    all_MC_hist_list.append(Top_hist_stacked)\n",
     "#----------------------------------------------\n",
+    "if len(group_Ewk_hists) > 0:\n",
+    "    Ewk_hist_stacked = group_Ewk_hists[0]\n",
+    "    if len(group_Ewk_hists) > 1:\n",
+    "        for idx in range(1, len(group_Ewk_hists)):\n",
+    "            Ewk_hist_stacked.Add(group_Ewk_hists[idx])\n",
+    "    Ewk_hist_stacked.SetLineColor(1);\n",
+    "    Ewk_hist_stacked.SetFillColor(ROOT.kGreen+1);\n",
+    "    all_MC_hist_list.append(Ewk_hist_stacked)\n",
+    "#----------------------------------------------\n",
+    "if len(group_VV_hists) > 0:\n",
+    "    VV_hist_stacked = group_VV_hists[0]\n",
+    "    if len(group_VV_hists) > 1:\n",
+    "        for idx in range(1, len(group_VV_hists)):\n",
+    "            VV_hist_stacked.Add(group_VV_hists[idx])\n",
+    "    VV_hist_stacked.SetLineColor(1);\n",
+    "    VV_hist_stacked.SetFillColor(ROOT.kGreen+1);\n",
+    "    all_MC_hist_list.append(VV_hist_stacked)\n",
+    "#----------------------------------------------\n",
+    "if len(group_other_hists) > 0:\n",
+    "    other_hist_stacked = group_other_hists[0]\n",
+    "    if len(group_other_hists) > 1:\n",
+    "        for idx in range(1, len(group_other_hists)):\n",
+    "            other_hist_stacked.Add(group_other_hists[idx])\n",
+    "    other_hist_stacked.SetLineColor(1);\n",
+    "    other_hist_stacked.SetFillColor(ROOT.kGreen+1);\n",
+    "    all_MC_hist_list.append(other_hist_stacked)\n",
+    "#----------------------------------------------\n",
     "\n",
     "\n",
     "# aggregate all MC hist by stacking them\n",
@@ -394,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "id": "e3c218e4-98cb-4631-9c49-ca3464b0977c",
    "metadata": {},
    "outputs": [
@@ -424,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "50a695c2-8c1e-4f15-bf5a-3c60ae4021ff",
    "metadata": {},
    "outputs": [],
@@ -435,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "5d767a93-a9fe-46b3-b4bc-28ddd2659951",
    "metadata": {},
    "outputs": [],
@@ -448,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "ba309b1c-dd3c-44f2-83d9-d4069561dc0c",
    "metadata": {},
    "outputs": [],
